--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <section class="s-section-wrapper">
                     <div class="s-content-wrapper">
                         <h2 class="section__ttl">Works</h2>
-                        <div class="section-img-wrapper"><img src="/img/works-img.jpg" alt=""></div>
+                        <div class="section-img-wrapper"><img src="https://shu-nakashima.github.io/cresta-third/img/works-img.jpg" alt=""></div>
                         <p>DIGSMILEの制作実績を紹介します。</p>
                         <a href="#" class="btn-link">view more</a>
                     </div>
@@ -71,7 +71,7 @@
                 <section class="s-section-wrapper">
                     <div class="s-content-wrapper">
                         <h2 class="section__ttl">Culture</h2>
-                        <div class="section-img-wrapper"><img src="/img/culture-img.jpg" alt=""></div>
+                        <div class="section-img-wrapper"><img src="https://shu-nakashima.github.io/cresta-third/img/culture-img.jpg" alt=""></div>
                         <p>DIGSMILEの社内文化について紹介します。</p>
                         <a href="#" class="btn-link">view more</a>
                     </div>
@@ -100,7 +100,7 @@
                     </p>
                     <a href="/contact/index.html" class="btn-link">view more</a>
                 </div>
-                <div class="contact-img-wrapper"><img src="/img/contact-img.jpg" alt=""></div>
+                <div class="contact-img-wrapper"><img src="https://shu-nakashima.github.io/cresta-third/img/contact-img.jpg" alt=""></div>
             </div>
         </section>
     </main>
