--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <nav class="header-nav">
             <ul class="nav-list">
                 <li class="nav-item"><a href="./"><img src="https://shu-nakashima.github.io/cresta-third/img/simbol-logo@2x.png" alt="DIGSMILE INC."></a></li>
-                <li class="nav-item"><a href="/about/index.html">About us</a></li>
+                <li class="nav-item"><a href="https://shu-nakashima.github.io/cresta-third/about/index.html">About us</a></li>
                 <li class="nav-item"><a href="#">Works</a></li>
                 <li class="nav-item"><a href="#">Culture</a></li>
                 <li class="nav-item"><a href="#">Topics</a></li>
-                <li class="nav-item"><a href="/contact/index.html">Contact</a></li>
+                <li class="nav-item"><a href="https://shu-nakashima.github.io/cresta-third/contact/index.html">Contact</a></li>
             </ul>
         </nav>
         <button class="burger-btn">
@@ -107,6 +107,6 @@
     
     <footer class="footer"><small>&copy;2018 DIGSMILE INC.</small></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="/script/script.js"></script>
+    <script src="https://shu-nakashima.github.io/cresta-third/script/script.js"></script>
 </body>
 </html>
