--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         感じて生きていきたい。<br>
                         DIGSMILEの社名にはそんな想いが込められています。
                     </p>
-                    <a href="/about/index.html" class="btn-link">view more</a>
+                    <a href="https://shu-nakashima.github.io/cresta-third/about/index.html" class="btn-link">view more</a>
                 </div>
             </div>
         </section>
@@ -98,7 +98,7 @@
                     <p class="section__txt lines">制作の依頼、取材の依頼、IRや採用についての連絡・お問い合わせはコンタクトページから承っております。<br>
                         まずはお気軽にご連絡ください。担当者から改めて返信いたします。
                     </p>
-                    <a href="/contact/index.html" class="btn-link">view more</a>
+                    <a href="https://shu-nakashima.github.io/cresta-third/contact/index.html" class="btn-link">view more</a>
                 </div>
                 <div class="contact-img-wrapper"><img src="https://shu-nakashima.github.io/cresta-third/img/contact-img.jpg" alt=""></div>
             </div>
