--- a/about/index.html
+++ b/about/index.html
@@ -143,7 +143,7 @@
   
   <footer class="footer"><small>&copy;2018 DIGSMILE INC.</small></footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="/script/script.js"></script>
+  <script src="https://shu-nakashima.github.io/cresta-third/script/script.js"></script>
 </body>
 </html>
 
