--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <section class="s-section-wrapper">
                     <div class="s-content-wrapper">
                         <h2 class="section__ttl">Culture</h2>
-                        <div class="section-img-wrapper"><img src="cresta-third/img/culture-img.png" srcset="cresta-third/img/culture-img.png 1x,cresta-third/img/culture-img@2x.png 2x" alt=""></div>
+                        <div class="section-img-wrapper"><img src="img/culture-img.png" srcset="img/culture-img.png 1x,img/culture-img@2x.png 2x" alt=""></div>
                         <p>DIGSMILEの社内文化について紹介します。</p>
                         <a href="#" class="btn-link">view more</a>
                     </div>
