--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <section class="s-section-wrapper">
                     <div class="s-content-wrapper">
                         <h2 class="section__ttl">Works</h2>
-                        <div class="section-img-wrapper"><img src="https://shu-nakashima.github.io/cresta-third/img/works-img.png" srcset="https://shu-nakashima.github.io/cresta-third/img/works-img.png 1x, https://shu-nakashima.github.io/cresta-third/img/works-img@2x.png 2x" alt=""></div>
+                        <div class="section-img-wrapper"><img src="/img/works-img.png" srcset="/img/works-img.png 1x, /img/works-img@2x.png 2x" alt=""></div>
                         <p>DIGSMILEの制作実績を紹介します。</p>
                         <a href="#" class="btn-link">view more</a>
                     </div>
@@ -101,7 +101,7 @@
                     </p>
                     <a href="https://shu-nakashima.github.io/cresta-third/contact/index.html" class="btn-link">view more</a>
                 </div>
-                <div class="contact-img-wrapper"><img src="https://shu-nakashima.github.io/cresta-third/img/recruit-img.png" srcset="https://shu-nakashima.github.io/cresta-third/img/recruit-img.png 1x, https://shu-nakashima.github.io/cresta-third/img/recruit-img@2x.png 2x" alt=""></div>
+                <div class="contact-img-wrapper"><img src="img/recruit-img.png" srcset="img/recruit-img.png 1x, img/recruit-img@2x.png 2x" alt=""></div>
             </div>
         </section>
     </main>
