--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://shu-nakashima.github.io/cresta-third/css/style_base.css">
-    <link rel="stylesheet" href="https://shu-nakashima.github.io/cresta-third/css/stylesheet.css">
+    <link rel="stylesheet" href="css/style_base.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
     <title>(仮)DIGSMILE inc. | TOP</title>
 </head>
 <body>
@@ -15,11 +15,11 @@
             <ul class="nav-list">
                 <li class="nav-item"><a href="./">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="60.148" height="63" viewBox="0 0 60.148 63"><defs><filter id="a" x="0" y="0" width="60.148" height="63" filterUnits="userSpaceOnUse"><feOffset dy="3" input="SourceAlpha"/><feGaussianBlur stdDeviation="3" result="b"/><feFlood flood-opacity="0.161"/><feComposite operator="in" in2="b"/><feComposite in="SourceGraphic"/></filter></defs><g transform="translate(-50 0.063)"><g transform="matrix(1, 0, 0, 1, 50, -0.06)" filter="url(#a)"><path d="M22.969,45a23.236,23.236,0,0,1-8.941-1.768,22.925,22.925,0,0,1-7.3-4.822A22.405,22.405,0,0,1,1.8,31.258a22.141,22.141,0,0,1,.838-19.247A22.842,22.842,0,0,1,9.68,4.146v36.6H26.535a25.018,25.018,0,0,0,8.906-1.533,18.276,18.276,0,0,0,6.706-4.33A23.061,23.061,0,0,1,22.969,45ZM26.11,33.7H18.266v-23H26.11a12.673,12.673,0,0,1,8.858,3.087A11.152,11.152,0,0,1,38.3,22.2a11.152,11.152,0,0,1-3.332,8.414A12.673,12.673,0,0,1,26.11,33.7ZM40.661,8.152c-3.627-2.946-8.512-4.5-14.126-4.5H10.424a23.321,23.321,0,0,1,30.239,4.5Z" transform="translate(9 6)" fill="#fff"/></g></g></svg></a></li>
-                <li class="nav-item"><a href="https://shu-nakashima.github.io/cresta-third/about/index.html">About us</a></li>
+                <li class="nav-item"><a href="about/index.html">About us</a></li>
                 <li class="nav-item"><a href="#">Works</a></li>
                 <li class="nav-item"><a href="#">Culture</a></li>
                 <li class="nav-item"><a href="#">Topics</a></li>
-                <li class="nav-item"><a href="https://shu-nakashima.github.io/cresta-third/contact/index.html">Contact</a></li>
+                <li class="nav-item"><a href="contact/index.html">Contact</a></li>
             </ul>
         </nav>
         <button class="burger-btn">
@@ -54,7 +54,7 @@
                         感じて生きていきたい。<br>
                         DIGSMILEの社名にはそんな想いが込められています。
                     </p>
-                    <a href="https://shu-nakashima.github.io/cresta-third/about/index.html" class="btn-link">view more</a>
+                    <a href="about/index.html" class="btn-link">view more</a>
                 </div>
             </div>
         </section>
@@ -64,7 +64,7 @@
                 <section class="s-section-wrapper">
                     <div class="s-content-wrapper">
                         <h2 class="section__ttl">Works</h2>
-                        <div class="section-img-wrapper"><img src="/img/works-img.png" srcset="/img/works-img.png 1x, /img/works-img@2x.png 2x" alt=""></div>
+                        <div class="section-img-wrapper"><img src="img/works-img.png" srcset="img/works-img.png 1x, img/works-img@2x.png 2x" alt="work-img"></div>
                         <p>DIGSMILEの制作実績を紹介します。</p>
                         <a href="#" class="btn-link">view more</a>
                     </div>
@@ -72,7 +72,7 @@
                 <section class="s-section-wrapper">
                     <div class="s-content-wrapper">
                         <h2 class="section__ttl">Culture</h2>
-                        <div class="section-img-wrapper"><img src="img/culture-img.png" srcset="img/culture-img.png 1x,img/culture-img@2x.png 2x" alt=""></div>
+                        <div class="section-img-wrapper"><img src="img/culture-img.png" srcset="img/culture-img.png 1x,img/culture-img@2x.png 2x" alt="culture-img"></div>
                         <p>DIGSMILEの社内文化について紹介します。</p>
                         <a href="#" class="btn-link">view more</a>
                     </div>
@@ -99,15 +99,15 @@
                     <p class="section__txt lines">制作の依頼、取材の依頼、IRや採用についての連絡・お問い合わせはコンタクトページから承っております。<br>
                         まずはお気軽にご連絡ください。担当者から改めて返信いたします。
                     </p>
-                    <a href="https://shu-nakashima.github.io/cresta-third/contact/index.html" class="btn-link">view more</a>
+                    <a href="contact/index.html" class="btn-link">view more</a>
                 </div>
-                <div class="contact-img-wrapper"><img src="img/recruit-img.png" srcset="img/recruit-img.png 1x, img/recruit-img@2x.png 2x" alt=""></div>
+                <div class="contact-img-wrapper"><img src="img/recruit-img.png" srcset="img/recruit-img.png 1x, img/recruit-img@2x.png 2x" alt="recruit-img"></div>
             </div>
         </section>
     </main>
     
     <footer class="footer"><small>&copy;2018 DIGSMILE INC.</small></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://shu-nakashima.github.io/cresta-third/script/script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
