--- a/about/index.html
+++ b/about/index.html
@@ -99,7 +99,7 @@
               変化の激しい現代、私達はデザインの力で社会を良い方向に変革していく企業を目指していきます。
             </p>
           </div>
-          <div class="ceo-img-wrapper"><img src="../img/ceo-img.png" srcset="../img/ceo-img.png 1x,../img/ceo-img@2x.png 2x"></div>
+          <div class="ceo-img-wrapper"><img src="../img/ceo-img.png" srcset="../img/ceo-img.png 1x,../img/ceo-img@2x.png 2x" alt="ceo-img"></div>
         </div>
       </div>
     </section>
@@ -143,7 +143,7 @@
   
   <footer class="footer"><small>&copy;2018 DIGSMILE INC.</small></footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="/script/script.js"></script>
+  <script src="../script/script.js"></script>
 </body>
 </html>
 
